--- a/games/simon/simon.css
+++ b/games/simon/simon.css
@@ -38,43 +38,11 @@
 
 .body{
   /* background: var(--bg2);  */
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  min-height: 120vh;
-  width: 100%;
-}
-
-
-.main{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  min-height: 100vh;
   background: var(--bg4); 
-}
-
-.section{
-
-}
-
-.footer{
-  position: fixed;
-  bottom: 0;
-  display: flex;
-  width: 100%;
-  height: 20vh;
-  background: red;
-  z-index: 0;
-}
-
-.pc_board{
   transform-style: preserve-3d;
-}
 
-.rock-paper_pc{
+}
+.rock_paper{
 
   --spyro: 0;
 
@@ -92,7 +60,7 @@
   transform:  rotateX(75deg) rotateZ(calc(var(--spyro)*1deg));
 }
 
-.hand_pc{
+.hand{
   position: absolute;
   display: flex;
   justify-content: flex-end;
@@ -108,10 +76,6 @@
   perspective: 1100px;
 }
 
-.far.ipc{
+.far{
   transform: rotateZ(90deg);
-}
-
-.iplayer{
-  pointer-events: none;
 }
