--- a/games/home/clock.css
+++ b/games/home/clock.css
@@ -31,6 +31,10 @@
 }
 
 .wrapper{
+  --hr: 60;
+  --min: 180;
+  --sec: 0;
+  
   top: 4%;
   height: 92%;
   background: rgba(250 , 250, 240, 0.9);
