--- a/games/simon/css/simon.css
+++ b/games/simon/css/simon.css
@@ -37,8 +37,176 @@
  */
 
 .body{
-  /* background: var(--bg2);  */
-  background: var(--bg4); 
-  transform-style: preserve-3d;
-
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  background: var(--bg2);
+  font-family: 'Montserrat Alternates', sans-serif;
 }
+
+
+.main,
+.section,
+.footer,
+.nav{
+  display: flex;
+  width: 100%;
+}
+
+.main{
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  min-height: 90vh;
+}
+
+.footer{
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+  height: 2.5rem;
+  padding: 1rem 0 8rem 0;
+}
+
+.nav{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 95%;
+  height: 3rem;
+  background: var(--bg3);
+}
+
+
+/**
+ * =================================
+ *            SPECIFIC
+ * =================================
+ */
+
+
+.body_simon{
+  overflow: hidden;
+  background: no-repeat fixed url("../../../assets/scrabble-web.jpg"), #000;
+  background-position: 50% 30%;
+  background-size: 100%;
+}
+
+.board{
+  display: flex;
+  width: 100%;
+  
+}
+.button_container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  width: 100%;
+}
+
+.color{
+  display: flex;
+  width: 100%;
+  height: 150px;
+}
+
+
+
+.nav_container{
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(5.2rem, 1fr));
+  grid-auto-flow: column;
+  list-style: none;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+
+/**
+ * =================================
+ *    H's, TABLE, BUTTONS & LINKS
+ * =================================
+ */
+
+
+
+.btn{
+  min-width: 40px;
+  min-height: 40px;
+  outline: none;
+  color: var(--font1);
+  background: var(--bg3-t1);
+}
+
+.btn:hover,
+.btn:active,
+.btn:focus{
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.blue,
+.red,
+.green,
+.yellow,
+.white{
+  opacity: 0.8;
+  transition: background, opacity 250ms ease;
+}
+
+.blue{
+  background: blue;
+}
+.red{
+  background: red;
+}
+.green{
+  background: green;
+}
+.yellow{
+  background: yellow;
+}
+.white{
+  background: white;
+}
+
+
+.blue.after,
+.red.after,
+.green.after,
+.yellow.after,
+.white.after{
+  background: black;
+  opacity: 1;
+}
+
+
+.social{
+  display: flex;
+  width: 80%;
+  justify-content: space-evenly;
+}
+
+.li_link{
+  display: flex;
+  justify-content: space-evenly;
+  height: 100%;
+  text-align: center;
+}
+
+.link{
+  display: flex;
+  color: var(--bg2);
+  text-decoration: none;
+  justify-content: center;
+}
+
+.link:hover,
+.link:active,
+.link:focus{
+  background: #000a;
+  color: #fff;
+}
+
