--- a/games/home/css/styles.css
+++ b/games/home/css/styles.css
@@ -31,16 +31,19 @@
  */
 
 .body{
-  position: relative;
+  width: 100%;
   margin: 0;
+  padding: 0;
   font-size: 15px;
   color: var(--font1);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
   background: var(--bg5);
   font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.home{
+  position: relative;
+  max-width: 1368px;
+  margin: 0 auto;
 }
 
 .header{
@@ -69,7 +72,7 @@
   margin: 0;
   position: -webkit-sticky;
   position: sticky;
-  top: 95%;
+  top: 93%;
   height: 60px;
   background: var(--bg-nav);
 }
@@ -79,11 +82,11 @@
   align-items: flex-start;
   justify-content: center;
   grid-template-columns: 
-    repeat(auto-fit, minmax(5.2rem, 1fr));
+    repeat(auto-fit, minmax(4.5rem, 1fr));
   grid-auto-flow: column;
   list-style: none;
   text-align: center;
-  width: 96%;
+  width: 98%;
   margin: 0.5rem auto;
   padding: 0;
   overflow: hidden;
@@ -93,7 +96,7 @@
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  height: 200px;
+  height: 215px;
   padding: 60px 0;
   background: var(--bg3);
   color: var(--font0);
@@ -128,7 +131,36 @@
    color: var(--bg2);
 }
 
-.link{
+
+.link,
+.link:link,
+.link:visited,
+.modal_close{
+  text-decoration: none;
+  padding: 5px;
+  color: var(--font1);
+}
+
+.link,
+.link:link,
+.link:visited{
+  position: relative;
+}
+
+
+.link:focus,
+.btn:focus{
+  outline: none;
+}
+
+.link:active,
+.btn:active,
+.modal_close:active{
+  color: var(--font-nav);
+}
+
+
+/* .link{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
@@ -148,7 +180,7 @@
   color: var(--font1);
   background: var(--bg1-transparent1);
   box-shadow: 0 0 1px var(--shadow-l1);
-}
+} */
 
 .link_nav,
 .link_nav:link,
