--- a/games/simon/css/simon.css
+++ b/games/simon/css/simon.css
@@ -9,9 +9,10 @@
   --bg2: #1f4172;
   --bg3:#fff;
   --bg4: #acd5d6;
-  --font:#000020;
-  --font1:#d2d2d2;
-  --font2:#fcd9b8;
+  --font1:#000020;
+  --font2:#d88291;
+  /* --font1:#d2d2d2; */
+  /* --font2:#fcd9b8; */
   --font3:#aaf255;
   --font4: #ecf1f1;
   --error1: #d88291;
@@ -57,22 +58,40 @@
   min-height: 90vh;
 }
 
+.nav{
+  margin: 0;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 93%;
+  height: 60px;
+  background: var(--bg2);
+}
+
+.nav_container{
+  display: grid;
+  align-items: flex-start;
+  justify-content: center;
+  grid-template-columns: 
+    repeat(auto-fit, minmax(4.5rem, 1fr));
+  grid-auto-flow: column;
+  list-style: none;
+  text-align: center;
+  width: 98%;
+  margin: 0.5rem auto;
+  padding: 0;
+  overflow: hidden;
+}
+
 .footer{
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  height: 2.5rem;
-  padding: 1rem 0 8rem 0;
-}
-
-.nav{
-  position: -webkit-sticky;
-  position: sticky;
-  top: 95%;
-  height: 3rem;
+  height: 215px;
+  padding: 0 0 60px 0;
   background: var(--bg3);
+  color: var(--font0);
+  transition: background 200ms;
 }
-
 
 /**
  * =================================
@@ -94,11 +113,6 @@
   justify-content: space-evenly;
 }
 
-.stats{
-  width: 100%;
-  min-height: 45vh;
-  background: var(--bg4);
-}
 
 .wrapper_board{
   position: relative;
@@ -109,26 +123,13 @@
 
 .button_container{
   position: absolute;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  display: flex;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-}
-
-
-.nav_container{
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(5.2rem, 1fr));
-  grid-auto-flow: column;
-  list-style: none;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+  transform-origin: center;
+  transition: transform 300ms ease;
 }
 
 
@@ -153,7 +154,7 @@
 .btn:active,
 .btn:focus{
   opacity: 1;
-  box-shadow: inset 0 0 12px 8px #00000050;
+  box-shadow: inset -10px -10px 12px 8px #00000085;
 }
 
 .blue,
@@ -165,37 +166,32 @@
   width: 50%;
   height: 50%;
   opacity: 1;
-  transition: background, opacity 250ms ease;
+  border-radius: 50%;
+  top: 25%;
+  left: 25%;
+  border: none;
+  transition: opacity 250ms ease;
 }
 
 .button_container button:nth-child(1){
-  top: 0;
-  left: 0;
-  background: blue;
+  background: radial-gradient(ellipse at 20% 20%, #bbf, blue 50%);
+  transform: translateY(60%) translateX(-40%);
 }
 .button_container button:nth-child(2){
-  top: 0;
-  right: 0;
-  background: red;
+  background: radial-gradient(ellipse at 20% 20%, #fbb, red 50%);
+  transform: translateY(60%) translateX(40%);
 }
 .button_container button:nth-child(3){
-  bottom: 0;
-  right: 0;
-  background: green;
+  background: radial-gradient(ellipse at 20% 20%, #bfb, green 50%);
+  transform: translateY(-17%) translateX(60%);
 }
 .button_container button:nth-child(4){
-  bottom: 0;
-  left: 0;
-  background: yellow;
+  background: radial-gradient(ellipse at 20% 20%, #ffb, yellow 50%);
+  transform: translateY(-17%) translateX(-60%);
 }
 .button_container button:nth-child(5){
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-  border-radius: 50%;
-  background: white;
+  background: radial-gradient(ellipse at 20% 20%, #fff, #999 50%);
+  transform: translateY(-60%) translateX(0);
 }
 
 .button_container button:nth-child(1).after,
@@ -211,10 +207,9 @@
   position: absolute;
   display: flex;
   width: 100%;
-  height: 35%;
-  top: -35%;
+  height: 25%;
+  top: 125%;
   left: 0;
-  z-index: 200;
   align-items: center;
   justify-content: space-evenly;
   background: var(--bg2);
@@ -248,7 +243,7 @@
 .link_nav,
 .link_nav:link,
 .link_nav:visited{
-  color: var(--font-nav);
+  color: var(--font3);
   font-size: 1rem;
   font-weight: 400;
 }
