--- a/games/simon/css/simon.css
+++ b/games/simon/css/simon.css
@@ -6,15 +6,17 @@
 
 :root{
   --bg1: #000;
+  --bg1-t1: #00000077;
   --bg2: #1f4172;
-  --bg3:#fff;
+  --bg3:#e3e3e3;
   --bg4: #acd5d6;
   --font1:#000020;
   --font2:#d88291;
   /* --font1:#d2d2d2; */
   /* --font2:#fcd9b8; */
-  --font3:#aaf255;
+  --font3:#acd5d6;
   --font4: #ecf1f1;
+  --font5:#aaf255;
   --error1: #d88291;
   --error2: #febbbb;
   --linkActive: #BB86FC;
@@ -42,6 +44,7 @@
   font-family: 'Montserrat Alternates', sans-serif;
 }
 
+.header,
 .section,
 .footer,
 .nav{
@@ -49,13 +52,21 @@
   width: 100%;
 }
 
+.header{
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background: var(--bg3);
+}
+
 .main{
   position: relative;
+  padding-top: 14vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
-  min-height: 90vh;
+  min-height: 75vh;
 }
 
 .nav{
@@ -65,6 +76,7 @@
   top: 93%;
   height: 60px;
   background: var(--bg2);
+  z-index: 200;
 }
 
 .nav_container{
@@ -99,26 +111,83 @@
  * =================================
  */
 
+h1{
+  font-size: 1.8rem;
+  margin: 0 15px 0 110px;
+  padding: 0.5rem 0;
+}
 
 .body_simon{
   max-width: 1368px;
   background: no-repeat fixed 
     url("../../../assets/checkers.jpg"), var(--bg1);
   background-position: 50% 30%;
-  background-size: 100%;
+  background-size: cover;
 }
 
-.board{
-  min-height: 60vh;
+.change_nick{
+  position: fixed;
   justify-content: space-evenly;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform: scale(0, 0);
+  background: var(--bg1-t1);
+  transition: transform 200ms ease, opacity 200ms ease;
+  z-index: 500;
 }
 
+.change_nick.after{
+  opacity: 1;
+  transform: scale(1, 1);
+}
+
+.form_nick{
+  width: 80%;
+  max-width: 500px;
+  margin: 20vh auto;
+  background: var(--bg3);
+  display: none;
+}
+
+.form_nick.after{
+  display: block;
+}
+
+.history{
+  width: 96%;
+  margin: 5vh auto;
+  text-align: center;
+  background: var(--bg3);
+  color: var(--font1);
+  display: none;
+}
+
+.history.after{
+  display: table;
+}
+
+.actual_user{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  background: var(--bg1-t1);
+  color: var(--font3);
+}
+
+.thcell,
+.tcell{
+  text-align: center;
+  user-select: none;
+}
 
 .wrapper_board{
   position: relative;
   display: flex;
-  width: 250px;
-  height: 250px;
+  width: 220px;
+  height: 220px;
 }
 
 .button_container{
@@ -130,6 +199,10 @@
   left: 0;
   transform-origin: center;
   transition: transform 300ms ease;
+}
+
+.board{
+  justify-content: space-evenly;
 }
 
 
@@ -157,52 +230,6 @@
   box-shadow: inset -10px -10px 12px 8px #00000085;
 }
 
-.blue,
-.red,
-.green,
-.yellow,
-.white{
-  position: absolute;
-  width: 50%;
-  height: 50%;
-  opacity: 1;
-  border-radius: 50%;
-  top: 25%;
-  left: 25%;
-  border: none;
-  transition: opacity 250ms ease;
-}
-
-.button_container button:nth-child(1){
-  background: radial-gradient(ellipse at 20% 20%, #bbf, blue 50%);
-  transform: translateY(60%) translateX(-40%);
-}
-.button_container button:nth-child(2){
-  background: radial-gradient(ellipse at 20% 20%, #fbb, red 50%);
-  transform: translateY(60%) translateX(40%);
-}
-.button_container button:nth-child(3){
-  background: radial-gradient(ellipse at 20% 20%, #bfb, green 50%);
-  transform: translateY(-17%) translateX(60%);
-}
-.button_container button:nth-child(4){
-  background: radial-gradient(ellipse at 20% 20%, #ffb, yellow 50%);
-  transform: translateY(-17%) translateX(-60%);
-}
-.button_container button:nth-child(5){
-  background: radial-gradient(ellipse at 20% 20%, #fff, #999 50%);
-  transform: translateY(-60%) translateX(0);
-}
-
-.button_container button:nth-child(1).after,
-.button_container button:nth-child(2).after,
-.button_container button:nth-child(3).after,
-.button_container button:nth-child(4).after,
-.button_container button:nth-child(5).after{
-  background: black;
-  opacity: 0.9;
-}
-
 .btn_play{
   position: absolute;
   display: flex;
@@ -217,6 +244,24 @@
   font-size: 1.5rem;
 }
 
+.btn_history{
+  position: fixed;
+  max-width: 70px;
+  margin: 0;
+  padding: 3px;
+  top: 0;
+  left: 0;
+  z-index: 350;
+}
+
+
+.form_item{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+  padding: 20%;
+}
 
 .li_link{
   display: flex;
@@ -270,15 +315,15 @@
   width: 100%;
   height: 4px;
   left: 0;
-  bottom: -2px;
-  background: var(--font-nav);
+  bottom: 2px;
+  background: var(--font5);
   transform: scaleX(0);
   transition: transform 200ms;
 }
 
 .link_nav:hover,
 .link_nav:focus{
-  color: var(--font-nav); 
+  color: var(--font5); 
 }
 
 .link_nav:hover::after,
@@ -294,5 +339,45 @@
 .link:active,
 .btn:active,
 .modal_close:active{
-  color: var(--font-nav);
+  color: var(--font5);
+}
+
+.color{
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  opacity: 1;
+  border-radius: 50%;
+  top: 25%;
+  left: 25%;
+  border: none;
+  transition: opacity 150ms ease;
+}
+
+.color.after,
+.color:active{
+  background: black;
+  opacity: 0.9;
+}
+
+
+.blue{
+  background: radial-gradient(ellipse at 20% 20%, #bbf, blue 50%);
+  transform: translateY(57%) translateX(-40%);
+}
+.red{
+  background: radial-gradient(ellipse at 20% 20%, #fbb, red 50%);
+  transform: translateY(57%) translateX(40%);
+}
+.green{
+  background: radial-gradient(ellipse at 20% 20%, #bfb, green 50%);
+  transform: translateY(-17%) translateX(60%);
+}
+.yellow{
+  background: radial-gradient(ellipse at 20% 20%, #ffb, yellow 50%);
+  transform: translateY(-17%) translateX(-60%);
+}
+.white{
+  background: radial-gradient(ellipse at 20% 20%, #fff, #999 50%);
+  transform: translateY(-57%) translateX(0);
 }
