--- a/games/rock/css/rock.css
+++ b/games/rock/css/rock.css
@@ -220,6 +220,7 @@
   font-weight: 600;
 }
 
+
 .text{
   font-size: 1rem;
   font-weight: 200;
@@ -283,6 +284,10 @@
   font-size: 1.7rem;
   font-weight: 700;
   border-radius: 50%;
+}
+
+.ipc{
+  color: var(--bg2);
 }
 
 .iplayer{
