--- a/games/rock/css/rock.css
+++ b/games/rock/css/rock.css
@@ -27,16 +27,28 @@
  *              GENERAL
  * =================================
  */
-
-.body{
+.body,
+.nav_container,
+.welcome,
+.show_inner,
+.table{
   margin: 0;
   padding: 0;
+}
+.body{
   font-size: 16px;
   background: var(--bg4-t1);
   font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .main,
+.nav,
+.footer{
+  min-width: 280px;
+  max-width: 1368px;
+  margin: 0 auto;
+}
+
 .section,
 .footer,
 .nav{
@@ -45,7 +57,8 @@
 }
 
 .main{
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: minmax(280px, 600px);
   align-items: center;
   justify-content: space-around;
   min-height: 100vh;
@@ -66,29 +79,27 @@
   position: -webkit-sticky;
   position: sticky;
   top: 95%;
-  height: 3rem;
+  height: 50px;
   background: var(--bg3);
 }
-
-
-/**
- * =================================
- *            SPECIFIC
- * =================================
- */
 
 .nav_container{
   display: grid;
   align-items: center;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(5.2rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
   grid-auto-flow: column;
   list-style: none;
   width: 100%;
-  margin: 0;
-  padding: 0;
   overflow: hidden;
 }
+
+
+/**
+ * =================================
+ *            PC-BOARD
+ * =================================
+ */
 
 .pc_board{
   flex-direction: column;
@@ -98,20 +109,22 @@
   overflow: hidden;
  
 }
-
+.welcome{
+  font-size: 1.5rem;
+  text-align: center;
+}
 .rock-paper_pc{
   --spyro: 0;
   --transZ: 250;
 
   position: relative;
-  width: 300px;
+  width: 350px;
   height: 110px;
   transition: transform 800ms;
   transform-style: preserve-3d;
   transform: rotateY(calc(var(--spyro)*1deg));
   transform-origin: center;
 }
-
 .hand_pc{
   position: absolute;
   display: flex;
@@ -129,192 +142,44 @@
 }
 
 .spock{
-  transform: rotateY(72deg) translateZ(250px);
+  transform: rotateY(72deg) translateZ(500px);
 }
 
 .lizard{
-  transform: rotateY(144deg) translateZ(250px);
+  transform: rotateY(144deg) translateZ(500px);
 }
 
 .rock{
-  transform: rotateY(216deg) translateZ(250px);
+  transform: rotateY(216deg) translateZ(500px);
 }
 
 .paper{
-  transform: rotateY(288deg) translateZ(250px);
+  transform: rotateY(288deg) translateZ(500px);
 }
 
 .scissors{
-  transform: rotateY(360deg) translateZ(250px);
+  transform: rotateY(360deg) translateZ(500px);
 }
 
 
-.dashboard{
-  align-items: center;
-  justify-content: space-evenly;
-  transform-style: preserve-3d;
-  perspective: 1100px;
-}
+/**
+ * =================================
+ *              CENTRAL
+ * =================================
+ */
 
 .central{
   align-items: center;
   justify-content: space-evenly;
-  min-height: 9.5rem;
+  min-height: 160px;
 }
-
-.stats{
-  position: relative;
-  display: flex;
-  width: 90%;
-  min-height: 10.6rem;
-  height: 22vh;
-  bottom: 0;
-  transform: rotateX(0) scale(1);
-  transform-origin: center;
-  transform-style: preserve-3d;
-  transition: transform 200ms ease;
-  color: var(--font1);
-}
-
-.stats.after{
-  transform: rotateX(180deg) scale(0.7);
-}
-
-.front,
-.back{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  overflow: hidden;
-  border-radius: 1rem;
-  box-shadow: 0 0 4px 2px rgba(255,255,255,0.35);;
-}
-
-.front{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background: var(--bg2-t1);
-}
-
-.back{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(2.62rem, 1fr));
-  background: var(--bg2-t2);
-  transform: rotateX(180deg);
-}
-
-/**
- * =================================
- *    H's, TABLE, BUTTONS & LINKS
- * =================================
- */
-
-.welcome,
-.title_table{
-  font-size: 1.3rem;
-  font-weight: 400;
-  margin: 0;
-  backface-visibility: hidden;
-}
-
-.show_move{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-  align-items: center;
-  width: 100%;
-}
-
-.show_inner{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
-
-.text{
-  font-size: 1rem;
-  font-weight: 200;
-  text-align: center;
-  margin: 0 auto;
-}
-
-.inner_text{
-  font-size: 1rem;
-  font-weight: 300;
-  text-align: center;
-}
-
-.td,
-.tr,
-.th,
-.tbody,
-.thead,
-.table,
-.welcome,
-.title_table{
-  text-align: center;
-}
-
-.td{
-  min-width: 30px;
-  max-width: 70px;
-}
-
-.table{
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-
-.btn{
-  min-width: 40px;
-  min-height: 40px;
-  outline: none;
-  color: var(--font1);
-  background: var(--bg3-t1);
-}
-
-.btn:hover,
-.btn:active,
-.btn:focus{
-  background: var(--bg3-t2);
-  cursor: pointer;
-}
-
-.btn_play{
-  width: 100%;
-  height: 100%;
-  font-size: 1.7rem;
-  font-weight: 700;
-  border-radius: 50%;
-}
-
-.ipc{
-  color: var(--bg2);
-}
-
-.iplayer{
-  font-size: 2.3rem;
-  color: var(--font1);
-  pointer-events: none;
-}
-
 .wrapper_lets-play{
   position: relative;
   display: flex;
-  width: 8rem;
-  height: 8rem;
+  width: 130px;
+  height: 130px;
   transform-style: preserve-3d;
 }
-
 .indicator{
   --sec: 0;
 
@@ -327,7 +192,6 @@
   transition: transform 1000ms linear;
   transform: rotateZ(calc(var(--sec)*360deg));
 }
-
 .indicator::after{
   position: absolute;
   content: '';
@@ -339,6 +203,158 @@
   background: var(--font3);
 }
 
+/**
+ * =================================
+ *              DASHBOARD
+ * =================================
+ */
+
+.dashboard{
+  align-items: center;
+  justify-content: space-evenly;
+  transform-style: preserve-3d;
+  perspective: 1100px;
+}
+.stats{
+  position: relative;
+  display: flex;
+  width: 90%;
+  min-height: 170px;
+  height: 22vh;
+  bottom: 0;
+  transform: rotateX(0) scale(1);
+  transform-origin: center;
+  transform-style: preserve-3d;
+  transition: transform 200ms ease;
+  color: var(--font1);
+}
+.stats.after{
+  transform: rotateX(180deg) scale(0.7);
+}
+.front,
+.back{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  backface-visibility: hidden;
+}
+.front{
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background: var(--bg2-t1);
+}
+.front:hover::after{
+  position: absolute;
+  content: '';
+  display: flex;
+  top: -125%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 200px;
+  height: 200px;
+  background: no-repeat url('../../../assets/rock-img.png'), var(--bg2);
+  background-size: contain;
+  background-position: center;
+  background-attachment: scroll;
+  backface-visibility: hidden;
+  border-radius: 16px;
+}
+.back{
+  display: grid;
+  background: var(--bg2-t2);
+  transform: rotateX(180deg);
+  grid-template-columns: repeat(auto-fit, minmax(45px, 1fr));
+}
+
+
+/**
+ * =================================
+ *      TABLE, BUTTONS & LINKS
+ * =================================
+ */
+
+/* table */
+.title_table{
+  font-size: 0.8rem;
+  font-weight: 400;
+  user-select: none;
+}
+.show_move{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+  align-items: center;
+  user-select: none;
+}
+.show_inner{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  user-select: none;
+}
+.winner{
+  font-size: 1.1rem;
+}
+.text{
+  font-size: 1rem;
+  font-weight: 200;
+  text-align: center;
+  margin: 0 auto;
+}
+.inner_text{
+  font-size: 1rem;
+  font-weight: 300;
+  text-align: center;
+}
+.td,
+.tr,
+.th,
+.tbody,
+.thead,
+.table,
+.title_table{
+  text-align: center;
+}
+.table{
+  width: 100%;
+  user-select: none;
+}
+.td{
+  min-width: 30px;
+  max-width: 70px;
+}
+
+/* buttons */
+.btn{
+  min-width: 40px;
+  min-height: 40px;
+  outline: none;
+  color: var(--font1);
+  background: var(--bg3-t1);
+}
+.btn:hover,
+.btn:active,
+.btn:focus{
+  background: var(--bg3-t2);
+  cursor: pointer;
+}
+.btn_play{
+  width: 100%;
+  height: 100%;
+  font-size: 1.7rem;
+  font-weight: 700;
+  border-radius: 50%;
+}
+
+/*  links  */
 .li_link{
   display: flex;
   justify-content: space-evenly;
@@ -359,4 +375,144 @@
   color: #fff;
 }
 
+/* icons */
+.ipc{
+  color: var(--bg2);
+}
+.iplayer{
+  font-size: 2.3rem;
+  color: var(--font1);
+  pointer-events: none;
+}
 
+
+@media (orientation: landscape) and (max-height: 414px){
+  .main{
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+          "pcboard pcboard"
+          "central dashboard";
+  }
+  .pc_board{
+    grid-area: pcboard;
+  }
+  .central{
+    grid-area: central;
+  }
+  .dashboard{
+    grid-area: dashboard;
+  }
+  .welcome{
+    font-size: 1rem;
+  }
+  .rock-paper_pc{
+    height: 80px;
+  }
+  .front:hover::after{
+    left: -100%;
+    top: 0;
+    bottom: 0;
+    margin: auto 0; 
+  }
+}
+
+@media (min-width: 768px){
+  .body,
+  .title_table,
+  .winner{
+    font-size: 1.35rem;
+  }
+  .welcome{
+    font-size: 1.8rem;
+  }
+  .iplayer{
+    font-size: 3rem;
+  }
+  .front:hover::after{
+    width: 250px;
+    height: 250px;
+  }
+}
+@media (min-width: 768px) and (min-height: 800px){
+  .body,
+  .title_table,
+  .winner{
+    font-size: 1.6rem;
+  }
+  .welcome{
+    font-size: 2.5rem;
+  }
+  .iplayer{
+    font-size: 4rem;
+  }
+  .central{
+    min-height: 200px;
+  }
+  .wrapper_lets-play{
+    width: 180px;
+    height: 180px;
+  }
+  .stats{
+    min-height: 220px;
+  }
+  .nav{
+    height: 80px;
+  }
+  .footer{
+    height: 290px;
+    padding: 0 0 100px 0;
+  }
+  .front:hover::after{
+    width: 280px;
+    height: 280px;
+  }
+}
+@media (min-width: 1024px) and (min-height: 900px){
+  .body,
+  .title_table,
+  .winner{
+    font-size: 2.2rem;
+  }
+  .welcome{
+    font-size: 3rem;
+  }
+  .hand_pc{
+    font-size: 7rem;
+  }
+  .central{
+    min-height: 300px;
+  }
+  .wrapper_lets-play{
+    width: 280px;
+    height: 280px;
+  }
+  .stats{
+    min-height: 400px;
+  }
+  .back{
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  }
+  .btn_play{
+    font-size: 2.7rem;
+  }
+  .text{
+    font-size: 2rem;
+  }
+  .inner_text{
+    font-size: 2.5rem;
+  }
+  .iplayer{
+    font-size: 4rem;
+  }
+  .nav{
+    height: 100px;
+  }
+  .footer{
+    height: 290px;
+    padding: 0 0 150px 0;
+  }
+  .front:hover::after{
+    width: 320px;
+    height: 320px;
+  }
+}
