--- a/games/home/css/clock.css
+++ b/games/home/css/clock.css
@@ -1,12 +1,32 @@
 
+/**
+ * =================================
+ *               CLOCK
+ * =================================
+ */
+
+ .clock{
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  color: #000;
+  mix-blend-mode: overlay;
+  transform-style: preserve-3d;
+  padding-bottom: 50vh;
+}
+
 .clock-container{
   position: relative;
   background: rgba(0 , 0, 90, 0.7);
-  width: 16em;
-  height: 16em;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   box-shadow: inset 0px 0px 6px 6px rgba(0, 0, 0, 0.7),
-                    0 0.5em 1em -0.2em rgb(0,0,0,0.35);
+                    0 8px 16px -0.2em rgb(0,0,0,0.35);
   transform: rotate3D(0.5, calc(-0.5 + var(--x, 0)),0, calc(var(--y)*1deg));
 }
 
@@ -126,3 +146,4 @@
   clip-path: polygon(50% 10%, 70% 30%, 50% 100%, 30% 30%);
   transform: rotateZ(calc(var(--sec)*6deg));
 }
+
