--- a/games/home/css/styles.css
+++ b/games/home/css/styles.css
@@ -6,16 +6,13 @@
 
 :root{
   --bg1: #000013;
-  --bg2: #1f4172;
-  --bg3: var(--font2);
-  --bg3-emphasis: var(--font1);
-  --bg5: #161825;
-  --font0:#000008;
-  --font1:#ecb460;
+  --bg2: #BEBDC2;
+  --bg3: #11121440;
+  --font1:#111214;
   --font2:#fcd9b8;
   
-  --bg-nav: #000;
-  --font-nav:#aaf255;
+  --font-nav:#FD7C7E;
+  --linkActive:#aaf255;
 
 }
 
@@ -34,9 +31,9 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  font-size: 15px;
+  font-size: 16px;
   color: var(--font1);
-  background: var(--bg5);
+  background: var(--bg2);
   font-family: 'Montserrat Alternates', sans-serif;
 }
 
@@ -46,7 +43,7 @@
   margin: 0 auto;
   background: no-repeat fixed url('../../../assets/home.jpg');
   background-position: 50% 30%;
-  background-size: 100%;
+  background-size: contain;
 }
 
 .header{
@@ -76,8 +73,9 @@
   position: -webkit-sticky;
   position: sticky;
   top: 93%;
-  height: 60px;
-  background: var(--bg-nav);
+  height: 65px;
+  background: var(--bg1);
+  z-index: 200;
 }
 
 .nav_container{
@@ -100,9 +98,9 @@
   justify-content: space-around;
   text-align: center;
   height: 215px;
-  padding: 60px 0;
-  background: var(--bg3);
-  color: var(--font0);
+  padding: 0 0 60px 0;
+  background: var(--bg2);
+  color: var(--font1);
   transition: background 200ms;
 }
 
@@ -112,36 +110,12 @@
  * =================================
  */
 
-.btn{
-   height: 80px;
-   min-width: 145px;
-   background: var(--bg3);
-   font-size: 1.2rem;
-   border-radius: 25% 10%;
-   box-shadow: 0.1rem 0.2rem 0.6rem #ffffff33;
-   transition: background, border-radius 200ms ease;
-}
-
-.btn:hover,
-.btn:focus-within{
-  border-radius: 10% 25%;
-  background: var(--bg3-emphasis);
-  box-shadow: 0.1rem 0.2rem 0.6rem #ffffff66;
-}
-
-.btn:hover .link,
-.btn:focus-within .link{
-   color: var(--bg2);
-}
-
-
 .link,
 .link:link,
-.link:visited,
-.modal_close{
-  text-decoration: none;
+.link:visited{
   padding: 5px;
   color: var(--font1);
+  text-decoration: none;
 }
 
 .link,
@@ -149,41 +123,6 @@
 .link:visited{
   position: relative;
 }
-
-
-.link:focus,
-.btn:focus{
-  outline: none;
-}
-
-.link:active,
-.btn:active,
-.modal_close:active{
-  color: var(--font-nav);
-}
-
-
-/* .link{
-   display: flex;
-   justify-content: space-evenly;
-   align-items: center;
-   width: 100%;
-   height: 100%;
-   color: var(--bg1);
-   text-decoration: none;
-   outline: none;
-}
-
-
-.link,
-.link:link,
-.link:visited{
-  text-decoration: none;
-  padding: 5px;
-  color: var(--font1);
-  background: var(--bg1-transparent1);
-  box-shadow: 0 0 1px var(--shadow-l1);
-} */
 
 .link_nav,
 .link_nav:link,
@@ -198,22 +137,59 @@
   color: var(--bg1);
 }
 
-/**
- * =================================
- *               CLOCK
- * =================================
- */
+.link:hover,
+.btn:hover{
+  color: inherit; 
+  font-weight: bold; 
+}
 
-.clock{
+.link::after,
+.link::after{
   position: absolute;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-end;
-  pointer-events: none;
+  content: '';
   width: 100%;
-  height: 100%;
-  color: #000;
-  mix-blend-mode: screen;
-  transform-style: preserve-3d;
-  padding-bottom: 50vh;
+  height: 4px;
+  left: 0;
+  bottom: -2px;
+  background: var(--font-nav);
+  transform: scaleX(0);
+  transition: transform 200ms;
+}
+
+.link_nav:hover,
+.link_nav:focus{
+  color: var(--font-nav); 
+}
+
+.link_nav:hover::after,
+.link_nav:focus::after{
+  transform: scaleX(1);
+}
+
+.link:focus,
+.btn:focus{
+  outline: none;
+}
+
+.link:active,
+.btn:active{
+  color: var(--font-nav);
+}
+.link_wrapper{
+  max-width: 100px;
+  text-align: center;
+  background: var(--bg3);
+  border-radius: 10px;
+}
+.link_wrapper:hover{
+  color: var(--bg2);
+
+}
+.games{
+  padding: 1rem;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.social{
+  padding: 0.5rem;
 }
