--- a/games/simon/css/simon.css
+++ b/games/simon/css/simon.css
@@ -11,17 +11,9 @@
   --bg3:#e3e3e3;
   --bg4: #acd5d6;
   --font1:#000020;
-  --font2:#d88291;
-  /* --font1:#d2d2d2; */
-  /* --font2:#fcd9b8; */
-  --font3:#acd5d6;
-  --font4: #ecf1f1;
-  --font5:#aaf255;
-  --error1: #d88291;
-  --error2: #febbbb;
+  --font2:#acd5d6;
+  --font3:#aaf255;
   --linkActive: #BB86FC;
-  --linkHover: #acd5d6;
-  /* --linkHover: #aaf255; */
 
 }
 
@@ -61,7 +53,7 @@
 
 .main{
   position: relative;
-  padding-top: 14vh;
+  padding-top: 12vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: flex-start;
@@ -84,7 +76,7 @@
   align-items: flex-start;
   justify-content: center;
   grid-template-columns: 
-    repeat(auto-fit, minmax(4.5rem, 1fr));
+    repeat(auto-fit, minmax(70px, 1fr));
   grid-auto-flow: column;
   list-style: none;
   text-align: center;
@@ -105,13 +97,23 @@
   transition: background 200ms;
 }
 
+.body_simon{
+  max-width: 1368px;
+  margin: 0 auto;
+  background: no-repeat fixed 
+    url("../../../assets/checkers.jpg"), var(--bg1);
+  background-position: 50% 30%;
+  background-size: cover;
+}
+
+
 /**
  * =================================
- *            SPECIFIC
+ *            FORMS & STATS
  * =================================
  */
 
-.btn_header-container{
+ .btn_header-container{
   margin: 0;
   padding: 0;
   width: 100%;
@@ -124,15 +126,6 @@ h1{
   font-size: 1.8rem;
   padding: 0.5rem 0;
   margin: 0 auto;
-}
-
-.body_simon{
-  max-width: 1368px;
-  margin: 0 auto;
-  background: no-repeat fixed 
-    url("../../../assets/checkers.jpg"), var(--bg1);
-  background-position: 50% 30%;
-  background-size: cover;
 }
 
 .change_nick{
@@ -155,7 +148,8 @@ h1{
   transform: scale(1, 1);
 }
 
-.form_nick{
+.form_nick,
+.form_clear{
   width: 80%;
   max-width: 500px;
   margin: 20vh auto;
@@ -163,8 +157,10 @@ h1{
   display: none;
 }
 
-.form_nick.after{
+.form_nick.after,
+.form_clear.after{
   display: block;
+  min-height: fit-content;
 }
 
 .history{
@@ -187,13 +183,62 @@ h1{
   margin: 0 auto;
   text-align: center;
   background: var(--bg1-t1);
-  color: var(--font3);
+  color: var(--font2);
 }
 
 .thcell,
 .tcell{
   text-align: center;
   user-select: none;
+}
+
+input{
+  padding: 0.7rem;
+  margin: 2rem;
+}
+
+.form_item{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 0 10% 10% 10%;
+}
+
+.form-clear_item{
+  display: grid;
+  grid-template-areas: 
+          '. pclear .'
+          '. hclear .'
+          'btnclear1 . btnclear2';
+  width: 100%;
+  height: 40%;
+  padding: 10%;
+}
+
+.pclear{
+  grid-area: pclear;
+}
+.hclear{
+  grid-area: hclear;
+}
+.btnclear-one{
+  grid-area: btnclear1;
+}
+.btnclear-snd{
+  grid-area: btnclear2;
+}
+
+
+/**
+ * =================================
+ *            GAME BOARD
+ * =================================
+ */
+
+.board{
+  justify-content: space-evenly;
 }
 
 .wrapper_board{
@@ -214,19 +259,14 @@ h1{
   transition: transform 300ms ease;
 }
 
-.board{
-  justify-content: space-evenly;
-}
-
 
 /**
  * =================================
- *    H's, TABLE, BUTTONS & LINKS
+ *      TABLE, BUTTONS & LINKS
  * =================================
  */
 
-
-
+/* general links-buttons */
 .btn{
   min-width: 40px;
   min-height: 40px;
@@ -235,53 +275,18 @@ h1{
   color: var(--font1);
   background: var(--bg3-t1);
 }
-
 .btn:hover,
 .btn:active,
 .btn:focus{
   opacity: 1;
   box-shadow: inset -10px -10px 12px 8px #00000085;
 }
-
-.btn_play{
-  position: absolute;
-  display: flex;
-  width: 100%;
-  height: 25%;
-  top: 125%;
-  left: 0;
-  align-items: center;
-  justify-content: space-evenly;
-  background: var(--bg2);
-  color: var(--font3);
-  font-size: 1.5rem;
-}
-
-.btn_history{
-  max-width: 70px;
-  margin: 0 auto;
-  padding: 3px;
-  top: 0;
-  left: 0;
-  z-index: 350;
-}
-
-
-.form_item{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100px;
-  padding: 20%;
-}
-
 .li_link{
   display: flex;
   justify-content: space-evenly;
   height: 100%;
   text-align: center;
 }
-
 .link,
 .link:link,
 .link:visited,
@@ -290,35 +295,30 @@ h1{
   padding: 5px;
   color: var(--font1);
 }
-
 .link,
 .link:link,
 .link:visited{
   position: relative;
 }
-
 .link_nav,
 .link_nav:link,
 .link_nav:visited{
-  color: var(--font3);
+  color: var(--font2);
   font-size: 1rem;
   font-weight: 400;
 }
-
 .link_footer-login,
 .link_footer-login:link,
 .link_footer-login:visited{
   background: transparent;
   color: var(--bg1);
 }
-
 .link:hover,
 .btn:hover,
 .modal_close:hover{
   color: var(--linkActive); 
   font-weight: bold; 
 }
-
 .link::after,
 .btn::after,
 .link::after{
@@ -328,40 +328,62 @@ h1{
   height: 4px;
   left: 0;
   bottom: 2px;
-  background: var(--font5);
+  background: var(--font3);
   transform: scaleX(0);
   transition: transform 200ms;
 }
-
 .link_nav:hover,
 .link_nav:focus{
-  color: var(--font5); 
+  color: var(--font3); 
 }
-
 .link_nav:hover::after,
 .link_nav:focus::after{
   transform: scaleX(1);
 }
-
 .link:focus,
 .btn:focus{
   outline: none;
 }
-
 .link:active,
 .btn:active,
 .modal_close:active{
-  color: var(--font5);
+  color: var(--font3);
 }
 
+/* specific links-buttons */
+.btn_play{
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 50%;
+  top: 115%;
+  left: 0;
+  align-items: center;
+  justify-content: space-evenly;
+  background: var(--bg2);
+  color: var(--font3);
+  font-size: 2.5rem;
+}
+.btn_history{
+  max-width: 70px;
+  margin: 0 auto;
+  padding: 3px;
+  top: 0;
+  left: 0;
+  z-index: 350;
+}
 .wrapper_close{
-  text-align: left;
+  text-align: center;
 }
 .modal_close{
   font-size: 2.2rem;
-  margin-left: 15px;
+}
+.clear{
+  font-size: 1.2rem;
 }
 
+
+/* buttons gameboard */
 .color{
   position: absolute;
   width: 50%;
@@ -400,4 +422,101 @@ h1{
 .white{
   background: radial-gradient(ellipse at 20% 20%, #fff, #999 50%);
   transform: translateY(-70%) translateX(0);
+}
+
+
+/**
+ * =================================
+ *            MEDIA-QUERIES
+ * =================================
+ */
+
+@media (orientation: landscape) and (max-height: 414px){
+  .board{
+    justify-content: flex-end;
+    padding-right: 30%;
+  }
+  .wrapper_board{
+    width: 150px;
+    height: 150px;
+  }
+  .btn_play{
+    top: 25%;
+    left: -140%;
+    padding: 15px;
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) and (orientation: portrait){
+  .body{
+    font-size: 26px;  
+  }
+  .wrapper_board{
+    width: 280px;
+    height: 280px;
+  }
+  .btn_history{
+    max-width: 170px;
+  }
+  .footer{
+    height: 350px;
+  }
+  .nav{
+    height: 80px;
+  }
+  .link_nav,
+  .link_nav:link,
+  .link_nav:visited{
+    font-size: 2rem;
+    font-weight: 500;
+  }
+}
+@media (min-width: 1024px) and (orientation: portrait){
+  .body{
+    font-size: 36px;  
+  }
+  .wrapper_board{
+    width: 400px;
+    height: 400px;
+  }
+  .btn_history{
+    max-width: 230px;
+  }
+  .footer{
+    height: 410px;
+  }
+  .nav{
+    height: 110px;
+  }
+  .link_nav,
+  .link_nav:link,
+  .link_nav:visited{
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
+}
+@media (min-width: 1366px){
+  .body{
+    font-size: 36px;  
+  }
+  .wrapper_board{
+    width: 400px;
+    height: 400px;
+  }
+  .btn_history{
+    max-width: 230px;
+  }
+  .footer{
+    height: 410px;
+  }
+  .nav{
+    height: 110px;
+  }
+  .link_nav,
+  .link_nav:link,
+  .link_nav:visited{
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
 }
