--- a/games/home/css/mediaq.css
+++ b/games/home/css/mediaq.css
@@ -5,7 +5,7 @@
  * =================================
  */
 
- @media (max-height: 449px) and (orientation: landscape){
+ @media (max-height: 450px) and (orientation: landscape){
   .clock{
     width: 100%;
     height: 100%;
@@ -18,15 +18,31 @@
   }
 }
 
-@media (min-width: 768px){
-  .body{
-    font-size: 25px;
+@media (min-width: 768px) and (orientation: portrait){
+  html{
+    font-size: 22px;
   }
   .link_wrapper{
-    max-width: 120px;
+    max-width: 140px;
   }
-  .games{
-    font-size: 1.8rem;
+  .clock-container{
+    width: 400px;
+    height: 400px;
+  }
+  .footer{
+    height: 300px;
+    padding: 0 0 90px 0;
+  }
+  .nav{
+    height: 85px;
+  }
+}
+@media (min-height: 768px) and (orientation: landscape){
+  html{
+    font-size: 20px;
+  }
+  .link_wrapper{
+    max-width: 130px;
   }
   .clock-container{
     width: 400px;
@@ -41,15 +57,27 @@
   }
 }
 
-@media (min-width: 1024px){
-  .body{
-    font-size: 36px;
+@media (min-width: 1024px) and (orientation: portrait){
+  html{
+    font-size: 26px;
   }
   .link_wrapper{
-    max-width: 180px;
+    max-width: 190px;
   }
-  .games{
-    font-size: 2.5rem;
+  .footer{
+    height: 400px;
+    padding: 0 0 105px 0;
+  }
+  .nav{
+    height: 100px;
+  }
+}
+@media (min-height: 1024px) and (orientation: landscape){
+  html{
+    font-size: 26px;
+  }
+  .link_wrapper{
+    max-width: 190px;
   }
   .footer{
     height: 400px;
