--- a/games/home/css/styles.css
+++ b/games/home/css/styles.css
@@ -26,12 +26,13 @@
  *              GENERAL
  * =================================
  */
-
+html{
+  font-size: 15px;
+}
 .body{
   width: 100%;
   margin: 0;
   padding: 0;
-  font-size: 16px;
   color: var(--font1);
   background: var(--bg2);
   font-family: 'Montserrat Alternates', sans-serif;
@@ -83,12 +84,12 @@
   align-items: flex-start;
   justify-content: center;
   grid-template-columns: 
-    repeat(auto-fit, minmax(4.5rem, 1fr));
+    repeat(auto-fit, minmax(72px, 1fr));
   grid-auto-flow: column;
   list-style: none;
   text-align: center;
   width: 98%;
-  margin: 0.5rem auto;
+  margin: 8px auto;
   padding: 0;
   overflow: hidden;
 }
@@ -101,7 +102,6 @@
   padding: 0 0 60px 0;
   background: var(--bg2);
   color: var(--font1);
-  transition: background 200ms;
 }
 
 /**
