--- a/games/home/css/styles.css
+++ b/games/home/css/styles.css
@@ -42,7 +42,7 @@ html{
   position: relative;
   max-width: 1368px;
   margin: 0 auto;
-  background: no-repeat fixed url('../../../assets/home.jpg');
+  background: no-repeat fixed url('/assets/img/home.jpg');
   background-position: 50% 30%;
   background-size: contain;
 }
