--- a/games/simon/css/styles.css
+++ b/games/simon/css/styles.css
@@ -101,7 +101,7 @@ html{
   max-width: 1368px;
   margin: 0 auto;
   background: no-repeat fixed 
-    url("../../../assets/checkers.jpg"), var(--bg1);
+    url("/assets/img/checkers.jpg"), var(--bg1);
   background-position: 50% 30%;
   background-size: cover;
 }
